--- a/section-27-typescript-intro/classes/package.json
+++ b/section-27-typescript-intro/classes/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn ./src/interface.ts"
+    "start": "ts-node-dev --respawn ./src/index.ts"
   },
   "keywords": [],
   "author": "Daniel Tapias Morales <tapmorales@gmail.com> (tapmorales.com)",
   "license": "MIT",
   "devDependencies": {
-    "ts-node-dev": "^1.1.1",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.1.3"
   }
 }
